  - Show transponder mode (if available) in transponder code InfoBox
  - add helpers on infoboxes for Argentinean contests 95% distance rule
  - Popup messages now appear at the top of the map
  - add status messages for user actions and state changes (alternates, task abort, task armed, final glide mode, terrain/topography visibility, airspace visibility)
  - FlarmTrafficWindow: align colors of FlarmTraffic with map for consistency
  - BigTrafficWidget: Save/Restore FLARM radar zoom on page change
  - BigTrafficWidget: zoom range to 5km when opening big radar via the FlarmGauge
  - terrain: added 2 new terrain ramps for use in very flat countries
  - add head wind component to V GND Infobox #1439
  - add V task leg Infobox #1767
  - PEV start wait/window times now have second accuraccy #1099
  - show station names in airspace details dialog
  - show squawk code in airspace details dialog
  - ability to send squawk code from airspace details dialog to transponder
  - add support for a dedicated north-up map page layout
  - the thermal assistant InfoBox is now clickable
  - Add support for multiple airspace files in UI
  - Add support for multiple waypoint files in UI
  - Add support for multiple  airfields or details waypoint in UI
  - QuickMenu: revamped look
  - QuickMenu: sane cursor control

* Android
  - fix crash on startup when loading icons on ldpi screens
  - update 'white list' of USB devices with one more VID/PID pair for SoftRF Academy
  - make xcsoar accessible from lock screen
  - battery: use scale for charge percent calculation
  - battery: prevent shutdown on devices without battery
* Windows
  - Popupmessages are now shown with full text again
* iOS
  - Improve audio support: prevent ducking and enable sound playback even when the phone is muted
* devices
  - Add driver for Condor 3
  - Add driver for LX Navigation Eos / Era variometers
  - Add driver for Stratux
  - Flarm: parse flarm error messages (PFLAE) and display them